2001-02-10  Bruno Haible  <haible@clisp.cons.org>

	* ja.po: New file, from Jun Sawataishi <jsawa@ibm.net>.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (install-data, install-data-yes): Move installation
	of po/Makefile.in.in from install-data-yes to install-data, so it is
	also installed when gettext is configured with --disable-nls.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* no.po: Update from Trond Endrestøl <endrestol@hotmail.com>.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* POTFILES.in: src/gettext.c was renamed from src/gettextp.c.
	Add lib/obstack.c, src/open-po.c, src/po-lex.h.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (.po.gmo): Pass --statistics to msgfmt.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	Remove catgets fallback code.
	- It does not handle message clash prevention through domains and
	  dgettext().
	- It does not handle message catalog inheritance and the LANGUAGE
	  environment variable.
	- It does not handle locale aliases.
	- It does not handle automatic charset conversion.
	- It does not handle plural form handling and ngettext().
	- It uses a slow string to integer conversion.
	- It is sensitive against installation problems.
	* Makefile.in.in (datadir): Assume DATADIRNAME = share.
	(SOURCES): Remove, assume empty.
	(CATOBJEXT): Remove, assume .gmo.
	(INSTOBJEXT): Remove, assume .mo.
	(.SUFFIXES): Remove .msg and .cat.
	(.po.cat): Remove rule.
	($(srcdir)/cat-id-tbl.c, $(srcdir)/stamp-cat-id): Remove rules.
	(install-data-yes): Update and simplify.
	(cat-id-tbl.o): Remove rule.
	(mostlyclean, distclean, maintainer-clean): Update.
	* cat-id-tbl.c: Remove file.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (update-po): Set PATH only for the gettext package.

2001-01-04  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in.in (install-data-yes): Fix syntax error with "@".

2000-12-31  Bruno Haible  <haible@clisp.cons.org>
