@@ -1,3 +1,14 @@
+2001-03-06  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.in.in (GMSGFMT, XGETTEXT): Remove useless PATH setting. The
+	macros @GMSGFMT@ and @XGETTEXT@ expand to absolute pathnames.
+	(MSGMERGE): Remove useless PATH setting. The gettext maintainer has
+	msgmerge already installed in his PATH.
+
+2001-02-27  Bruno Haible  <haible@clisp.cons.org>
+
+	* nn.po: Renamed from no@nynorsk.po.
+
 2001-02-10  Bruno Haible  <haible@clisp.cons.org>
 
 	* ja.po: New file, from Jun Sawataishi <jsawa@ibm.net>.
